[package]
name = "riverbed"
version = "0.1.0"
authors = ["Salsa Gal <fielddashos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polystrip = { git = "https://github.com/TheOnlyMrCat/polystrip", branch = "0.7", features = [ "metal" ] }
winit = "0.25.0"
image = "0.23.14"
